base working Cases input page

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,11 @@
 
 <!-- App -->
 <script src="app.js"></script>
+<script src="js/home-dir.js"></script>
+<script src="js/cases-dir.js"></script>
+<script src="js/new-dir.js"></script>
+<script src="js/products-dir.js"></script>
+<script src="js/service.js"></script>
 
 </body>
 
