--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
 	<script src="bower_components/moment/min/moment.min.js"></script>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+	<script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 	<script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
@@ -96,9 +97,10 @@
 
 	<!-- App -->
 	<script src="app.js"></script>
+	<script src="js/new-dir.js"></script>
 	<script src="js/home-dir.js"></script>
 	<script src="js/cases-dir.js"></script>
-	<script src="js/new-dir.js"></script>
+	<script src="js/login-dir.js"></script>
 	<script src="js/products-dir.js"></script>
 	<script src="js/service.js"></script>
 
