add login checks before rendering dashboard, cases, products and new pages

--- a/public/index.html
+++ b/public/index.html
@@ -50,13 +50,13 @@
 		<!-- Content Wrapper. Contains page content -->
 		<div class="content-wrapper" ui-view="main"></div>
 		<!-- /.content-wrapper -->
-		<footer class="main-footer">
-			<div class="pull-right hidden-xs">
-				<b>Version</b> 1.0.0
-			</div>
-			<strong>Copyright &copy; 2016-2017 <a href="http://firstroboticscanada.com"><i><strong>FIRST</strong></i> Robotics Canada</a>.</strong>
-			All rights reserved.
-		</footer>
+<!--<footer class="main-footer">
+	<div class="pull-right hidden-xs">
+		<b>Version</b> 1.0.0
+	</div>
+	<strong>Copyright &copy; 2016-2017 <a href="http://firstroboticscanada.com"><i><strong>FIRST</strong></i> Robotics Canada</a>.</strong>
+	All rights reserved.
+</footer>-->
 
 		<!-- Control Sidebar -->
 		<!-- /.control-sidebar -->
