rename new to create for use with products and cases

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Inventory System</title>
 	<!-- Tell the browser to be responsive to screen width -->
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+	<title>Inventory System</title>
 	<!-- Bootstrap 3.3.6 -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	<!-- Font Awesome -->
@@ -97,10 +98,10 @@
 
 	<!-- App -->
 	<script src="app.js"></script>
-	<script src="js/new-dir.js"></script>
 	<script src="js/home-dir.js"></script>
 	<script src="js/cases-dir.js"></script>
 	<script src="js/login-dir.js"></script>
+	<script src="js/create-dir.js"></script>
 	<script src="js/products-dir.js"></script>
 	<script src="js/service.js"></script>
 
