front-end changes for Order pages and links for check-in and check-out of items

--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,7 @@
 	<script src="js/cases-dir.js"></script>
 	<script src="js/login-dir.js"></script>
 	<script src="js/create-dir.js"></script>
+	<script src="js/orders-dir.js"></script>
 	<script src="js/products-dir.js"></script>
 	<script src="js/service.js"></script>
 
