--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
 	<!-- Bootstrap 3.3.6 -->
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="plugins/daterangepicker/daterangepicker.js"></script>
+	<script src="plugins/angular-ui-bootstrap/ui-bootstrap-tpls-2.4.0.min.js"></script>
 	<!-- datepicker -->
 	<script src="plugins/datepicker/bootstrap-datepicker.js"></script>
 	<!-- Bootstrap WYSIHTML5 -->
