rename home-dir to dashboard-dir. update dashboard to show no records on error

--- a/public/index.html
+++ b/public/index.html
@@ -86,12 +86,12 @@
 
 	<!-- App -->
 	<script src="app.js"></script>
-	<script src="js/home-dir.js"></script>
 	<script src="js/cases-dir.js"></script>
 	<script src="js/login-dir.js"></script>
 	<script src="js/create-dir.js"></script>
 	<script src="js/orders-dir.js"></script>
 	<script src="js/products-dir.js"></script>
+	<script src="js/dashboard-dir.js"></script>
 	<script src="js/service.js"></script>
 
 </body>
